package fr.univlille.sae;

public enum CellInfo {
    EMPTY, WALL, MONSTER, HUNTER, EXIT
}
